# AoC2017

AoC2017Day10/app/: Main.hs
AoC2017Day10/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
AoC2017Day11/: AoC2017Day11.cabal
AoC2017Day11/dist-newstyle/cache/: elaborated-plan  solver-plan  source-hashes  up-to-date
day10/: AoC2017Day10.cabal  CHANGELOG.md  LICENSE
day10/app/: Main.hs
day10/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
day11/: CHANGELOG.md
day11/app/: Main.hs
day11/dist-newstyle/cache/: compiler  config  improved-plan  plan.json
day12/: AoC2017Day12.cabal  CHANGELOG.md  input.txt
day12/app/: Main.hs
day12/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
