cabal-version:      3.0
name:               AoC2017Day12
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Dani Rybe
maintainer:         danilrybakov249@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable AoC2017Day12
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , containers
                    , vector
                    , megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010
